update video and links

--- a/_posts/2019-05-21-proj-jpeg.markdown
+++ b/_posts/2019-05-21-proj-jpeg.markdown
@@ -1,11 +1,13 @@
 ---
 layout: post
-title: "JPEG-2000Standard Image I/O Pipeline"
+title: "JPEG-2000 Standard Image I/O Pipeline"
 date:   2019-07-21 01:34:36 +0530
 type: proj
 conf: "Personal Side Project"
 # paperlink: MBPO.pdf
 thumb: lenatest.jpg
+code: https://github.com/drmeerkat/JPEG-2000-Image-IO
+Note: A self implemented JPEG standard IO without using standard libraries.
 ---
 
 Some content
