--- a/_posts/2020-02-13-kdd.markdown
+++ b/_posts/2020-02-13-kdd.markdown
@@ -7,6 +7,13 @@ type: pub
 conf: "Preprint(Under Review)"
 # paperlink: MBPO.pdf
 thumb: kdd-xe.png
+Authors: 
+    - "Jingyuan Wu"
+    - "Yufan Wu"
+    - "Mingxuan Li"
+    - "Xin Lin"
+    - "Junjie Wu"
+    - "Chao Li"
 ---
 
 Some content
