--- a/_posts/2020-02-13-kdd.markdown
+++ b/_posts/2020-02-13-kdd.markdown
@@ -8,7 +8,7 @@ conf: "Preprint(Under Review)"
 # paperlink: MBPO.pdf
 thumb: kdd-xe.png
 Authors: 
-    - "Jingyuan Wu"
+    - "Jingyuan Wang"
     - "Yufan Wu"
     - "Mingxuan Li"
     - "Xin Lin"
