--- a/_posts/2020-05-20-aaai.markdown
+++ b/_posts/2020-05-20-aaai.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Towards Sample Efficient Agents through Algorithmic Alignment"
 date:   2020-05-20 01:34:36 +0530
 type: pub
-confl: "AAAI-21 Student Abstract and Poster Program (To Appear)"
+confl: "AAAI-21 Student Abstract and Poster Program"
 clink: https://aaai.org/Conferences/AAAI-21/student-abstract-call/
 paperlink: https://arxiv.org/abs/2008.03229
 posterlink: /assets/papers/RLSSposter.png
